<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beats Per Minute Easy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tap_tap">T A P</string>
    <string name="help_help">Start tapping to measure BPM</string>
    <string name="time_time">Time: 00.00</string>
    <string name="Beats">Beats: 0</string>
    <string name="Beats_per_minute">BPM: 0</string>
    <string name="reset">RESET</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
