<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:background="#ff000000">

    <TextView android:text="@string/help_help" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/textView"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_tap"
        android:id="@+id/buttonTap"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="50sp"
        android:background="@drawable/button_bg"
        android:layout_alignParentBottom="true"
        android:textColor="#ffFFFFFF"
        android:clickable="true"
        android:layout_below="@+id/textViewBPM"
        android:onClick="tapClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Beats"
        android:id="@+id/textViewBeats"
        android:textSize="45sp"
        android:textColor="#ffffffff"
        android:layout_below="@+id/buttonReset"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Beats_per_minute"
        android:id="@+id/textViewBPM"
        android:layout_below="@+id/textViewBeats"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff"
        android:textSize="45sp"
        android:height="70dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/buttonReset"
        android:layout_alignParentTop="true"
        android:textSize="25sp"
        android:background="@drawable/button_bg2"
        android:visibility="invisible"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ff000000"
        android:height="50dp"
        android:clickable="true"
        android:onClick="resetClick"/>


</RelativeLayout>
